pull quote added

--- a/aboutus.html
+++ b/aboutus.html
@@ -3,7 +3,7 @@
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta charset="UTF-8">
-    <link href="https://fonts.googleapis.com/css?family=Lato:100,300,300i,400,700,700i,900|Grand+Hotel&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Lato:300,300i,400,400i,700|Grand+Hotel&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/styles.css">
     <title>About Us - Parkway Preschool</title>
 </head>
@@ -104,9 +104,11 @@
                     </svg>
                 </div>
                 <h3 class="aboutus__hdg">Our Mission</h3>
-                <p class="aboutus__summary">
-                    To partner with parents to offer a loving, nurturing, and Christ-filled environment where each child can be encouraged to develop their unique personalities and god-given talents.
-                </p>
+                <div class="aboutus__summary">
+                   <p class="aboutus__para">
+                      To partner with parents to offer a loving, nurturing, and Christ-filled environment where each child can be encouraged to develop their unique personalities and god-given talents. 
+                   </p>
+                </div>
             </div>
             <div class="aboutus__sect">
                 <div class="aboutus__imgwrap">
@@ -115,9 +117,11 @@
                     </svg>
                 </div>
                 <h3 class="aboutus__hdg">Who We Are</h3>
-                <p class="aboutus__summary">
-                    Parkway Presbyterian Preschool and Kindergarten, a private Christian preschool founded in 1999, currently serves 175 children ages 2 years through 5 years. The program is accredited by the <a href="#">North Georgia Preschool Association</a> and is recognized as a School of Excellence.
-                </p>
+                <div class="aboutus__summary">
+                   <p class="aboutus__para">
+                        Parkway Presbyterian Preschool and Kindergarten, a private Christian preschool founded in 1999, currently serves 175 children ages 2 years through 5 years. The program is accredited by the <a class="aboutus__link"  href="https://www.ngumc.org/preschoolassociation" target="_blank" rel="noopener">North Georgia Preschool Association</a> and is recognized as a School of Excellence.
+                   </p>
+                </div>
             </div>
             <div class="aboutus__sect">
                 <div class="aboutus__imgwrap">
@@ -126,9 +130,11 @@
                     </svg>
                 </div>
                 <h3 class="aboutus__hdg">Where We Are</h3>
-                <p class="aboutus__summary">
-                    Parkway Presbyterian Preschool and Kindergarten is located on the campus of <a href="#">Parkway Presbyterian Church</a> which has 16.6 acres of outdoor spaces filled with flowers, trees, and a garden that allows for investigation and learning experience. We are conveniently located off Bethleview Road and easily accessible to many areas of Forsyth County. Classrooms are age appropriate with centers and many options for exploration. 
-                </p>
+                <div class="aboutus__summary">
+                   <p class="aboutus__para">
+                    Parkway Presbyterian Preschool and Kindergarten is located on the campus of <a class="aboutus__link" href="https://www.parkway-church.org" target="_blank" rel="noopener">Parkway Presbyterian Church</a> which has 16.6 acres of outdoor spaces filled with flowers, trees, and a garden that allows for investigation and learning experience. We are conveniently located off Bethleview Road and easily accessible to many areas of Forsyth County. Classrooms are age appropriate with centers and many options for exploration.    
+                   </p>
+                </div>
             </div>
             <div class="aboutus__sect">
                 <div class="aboutus__imgwrap">
@@ -137,9 +143,11 @@
                     </svg>
                 </div>
                 <h3 class="aboutus__hdg">Our Families</h3>
-                <p class="aboutus__summary">
-                    Parents are an integral part of the program and are partners in the learning process. We invite parents into our preschool to serve and assist in many ways routinely such as the library and office, but often find many ways to assist within the classroom specifically to help the teacher. Parent/teacher conferences are held twice a year in addition to the daily and weekly communication between teachers and parents. Simply put, our Parkway families are the best and we consider it a high honor to partner in your child’s preschool years of learning and growth. 
-                </p>
+                <div class="aboutus__summary">
+                   <p class="aboutus__para">
+                    Parents are an integral part of the program and are partners in the learning process. We invite parents into our preschool to serve and assist in many ways routinely such as the library and office, but often find many ways to assist within the classroom specifically to help the teacher. Parent/teacher conferences are held twice a year in addition to the daily and weekly communication between teachers and parents. Simply put, our Parkway families are the best and we consider it a high honor to partner in your child’s preschool years of learning and growth.   
+                   </p>
+                </div>
             </div>
             <div class="aboutus__sect">
                 <div class="aboutus__imgwrap">
@@ -148,11 +156,24 @@
                     </svg>
                 </div>
                 <h3 class="aboutus__hdg">Your Child&apos;s Experience</h3>
-                <p class="aboutus__summary">
-                    Children experience numerous special programs and activities on a regular basis.  Our music program holds classes weekly and participate in songs and rhythms that utilize instruments. Children learn music theory in a joyful, engaging, interactive manner. Movement, offered weekly to all classes, emphasizes gross motor skills and cooperative play. Children work on developmental skills such as balance, hopping, skipping, jumping, coordination, spatial awareness, and other essential components of physical education. Spanish occurs in the four and five day classes for Fours and Young 5s. <br><br>
-                    Chapel occurs weekly in the sanctuary. Chapel is a developmentally appropriate time filled with songs, prayers and a bible story that utilizes props and interaction. Our chapel curriculum is based on one book, God’s Word. We begin each year in the Old Testament and finish each spring in the New Testament, learning how God’s love for us can be applied to build a faith of our own.  <br><br>
-                    Weather permitting, classes have scheduled playground time each day. Outdoor play provides the children with time for self-initiated imaginative play with peers. It is a time for loud noises, running, and exercise of climbing, jumping and moving together in groups. Preparation for outdoor play is a time for practicing self-help skills as children learn to identify their clothing, put on clothing, zip and unzip jackets, and eventually complete the process unassisted. 
-                </p>
+                <div class="aboutus__summary">
+                   <p class="aboutus__para">
+                       Children experience numerous special programs and activities on a regular basis.  Our music program holds classes weekly and participate in songs and rhythms that utilize instruments. Children learn music theory in a joyful, engaging, interactive manner. Movement, offered weekly to all classes, emphasizes gross motor skills and cooperative play. Children work on developmental skills such as balance, hopping, skipping, jumping, coordination, spatial awareness, and other essential components of physical education. Spanish occurs in the four and five day classes for Fours and Young 5s.
+                   </p>
+                   <p class="aboutus__para">
+                       Chapel occurs weekly in the sanctuary. Chapel is a developmentally appropriate time filled with songs, prayers and a bible story that utilizes props and interaction. Our chapel curriculum is based on one book, God’s Word. We begin each year in the Old Testament and finish each spring in the New Testament, learning how God’s love for us can be applied to build a faith of our own.  
+                   </p>
+                   
+                   <blockquote class="aboutus__quote">
+                       <span>&ldquo;</span>
+                       <p class="hay">Our chapel curriculum is based on one book, God’s Word. We begin each year in the Old Testament and finish each spring in the New Testament, learning how God’s love for us can be applied to build a faith of our own.</p>
+                   </blockquote>
+                   
+                   <p class="aboutus__para">
+                       Weather permitting, classes have scheduled playground time each day. Outdoor play provides the children with time for self-initiated imaginative play with peers. It is a time for loud noises, running, and exercise of climbing, jumping and moving together in groups. Preparation for outdoor play is a time for practicing self-help skills as children learn to identify their clothing, put on clothing, zip and unzip jackets, and eventually complete the process unassisted. 
+                   </p>
+
+                </div>
             </div>
             <div class="aboutus__sect">
                 <div class="aboutus__imgwrap">
