--- a/curriculum.html
+++ b/curriculum.html
@@ -115,7 +115,7 @@
                             
                             <div class="curriculum__info">
                                 <p class="curriculum__summary">The Twos classes teach from a broad variety of resources that focus on the Bible, academics, and development which allows the child to explore, play and learn new things. <a href="https://www.lwtears.com/" class="curriculum__link" rel="noopener" target="_blank">Handwriting Without Tears</a> is a developmental writing program that begins in the twos and focuses on building muscles in the hands to produce good writing and fine motor skills. Another component of our Twos is the social interaction between peers and adults on an independent level. For most children, the Twos class is the initial exposure to a classroom environment while still maintaining a play-based setting.</p>
-                                <small class="curriculum__note">**must be two on or before September 1<sup>st</sup>**</small> 
+                                <small class="curriculum__note">*must be two on or before September 1<sup>st</sup></small> 
                             </div>
                         </div>
                         <div class="curriculum__bottom">
@@ -157,7 +157,7 @@
                             </div>
                             
                             <div class="curriculum__info">
-                                <p class="curriculum__summary">Our three year old classes continue using the <a href="https://www.lwtears.com/" class="curriculum__link" rel="noopener" target="_blank">Handwriting Without Tears</a> curriculum and will begin practicing handwriting skills and letter formation. Zoo-Phonics curriculum focuses on language development, reading readiness, and letter and sound recognition. Students will begin basic math skills through the use of games and manipulatives. They will also begin estimation, prediction, and vocabulary expansion through calendar and circle time activities. Our threes classes participate in circle time, large and small group lessons, and learning centers. </p>
+                                <p class="curriculum__summary">Our three year old classes continue using the <a href="https://www.lwtears.com/" class="curriculum__link" rel="noopener" target="_blank">Handwriting Without Tears</a> curriculum and will begin practicing handwriting skills and letter formation. <a href="https://zoo-phonics.com/" class="curriculum__link" rel="noopener" target="_blank">Zoo-Phonics</a> curriculum focuses on language development, reading readiness, and letter and sound recognition. Students will begin basic math skills through the use of games and manipulatives. They will also begin estimation, prediction, and vocabulary expansion through calendar and circle time activities. Our threes classes participate in circle time, large and small group lessons, and learning centers. </p>
                             </div>
                         </div>
                         <div class="curriculum__bottom">
