updated calender and page headers

--- a/aboutus.html
+++ b/aboutus.html
@@ -65,7 +65,7 @@
                         <a href="curriculum.html" class="header__nav-link" data-title="Curriculum">Classes</a> 
                     </li>
                     <li class="header__nav-item">
-                        <a href="staff.html" class="header__nav-link" data-title="Staff">Staff</a>
+                        <a href="staff.html" class="header__nav-link" data-title="TheStaff">Staff</a>
                     </li>
                     <li class="header__nav-item">
                         <a href="calendar.html" class="header__nav-link" data-title="Calendar">Calendar</a>
@@ -362,7 +362,6 @@
         </svg>
     </a>
     
-    <!--<script src="js/jquery-3.4.1.min.js"></script>-->
     <script src="js/script.js"></script>
 </body>
 </html>
