--- a/contactus.html
+++ b/contactus.html
@@ -35,12 +35,16 @@
                 <div class="header__top-bar">
                     <ul class="header__top-bar-contact">
                         <li class="header__top-bar-item">
-                            <i class="header__top-bar-icon fa fa-phone"></i>
-                            <a href="tel:1-678-230-4384" class="header__top-bar-link header__phone-icon">1-678-230-4384</a>
+                            <svg class="header__top-bar-icon">
+                                <use xlink:href="img/sprite.svg#icon-phone" />
+                            </svg>
+                            <a href="tel:1-678-513-3909" class="header__top-bar-link header__phone-icon">1-678-513-3909</a>
                         </li>
                         <li class="header__top-bar-item">
-                            <i class="header__top-bar-icon fa fa-envelope"></i>
-                            <a href="mailto:school@parkway.com" class="header__top-bar-link">school@parkway.com</a>
+                            <svg class="header__top-bar-icon">
+                                <use xlink:href="img/sprite.svg#icon-envelop" />
+                            </svg>
+                            <a href="mailto:info@parkwaypreschool.com" class="header__top-bar-link">info@parkwaypreschool.com</a>
                         </li>
                     </ul>
                 </div>
@@ -49,7 +53,7 @@
         
         <div class="header__main-sect">
             <div class="header__logo">
-                <a href="/index.html" class="header__logo-link">
+                <a href="index.html" class="header__logo-link">
                     <img class="header__logo-image" src="img/logo.jpg" alt="parkway logo">
                 </a>
              </div>
@@ -70,16 +74,16 @@
                         <a href="index.html" class="header__nav-link" data-title="Home">Home</a>
                     </li>
                     <li class="header__nav-item">
-                        <a href="aboutus.html" class="header__nav-link" data-title="AboutUs">About Us</a>
+                        <a href="aboutus.html" class="header__nav-link" data-title="TheAboutUs">About Us</a>
                     </li>
                     <li class="header__nav-item">
-                        <a href="program.html" class="header__nav-link" data-title="Program">Program</a>
+                        <a href="program.html" class="header__nav-link" data-title="TheProgram">Program</a>
                     </li>
                     <li class="header__nav-item">
                         <a href="curriculum.html" class="header__nav-link" data-title="Curriculum">Classes</a> 
                     </li>
                     <li class="header__nav-item">
-                        <a href="staff.html" class="header__nav-link" data-title="Staff">Staff</a>
+                        <a href="staff.html" class="header__nav-link" data-title="TheStaff">Staff</a>
                     </li>
                     <li class="header__nav-item">
                         <a href="calendar.html" class="header__nav-link" data-title="Calendar">Calendar</a>
