--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                         <a href="curriculum.html" class="header__nav-link" data-title="Curriculum">Classes</a> 
                     </li>
                     <li class="header__nav-item">
-                        <a href="staff.html" class="header__nav-link" data-title="Staff">Staff</a>
+                        <a href="staff.html" class="header__nav-link" data-title="TheStaff">Staff</a>
                     </li>
                     <li class="header__nav-item">
                         <a href="calendar.html" class="header__nav-link" data-title="Calendar">Calendar</a>
