--- a/staff.html
+++ b/staff.html
@@ -3,7 +3,7 @@
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta charset="UTF-8">
-    <link href="https://fonts.googleapis.com/css?family=Lato:100,300,300i,400,700,700i,900|Grand+Hotel&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Lato:100,300,300i,400,700,700i,900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/styles.css">
     <title>Staff - Parkway Preschool</title>
 </head>
@@ -18,12 +18,16 @@
                 <div class="header__top-bar">
                     <ul class="header__top-bar-contact">
                         <li class="header__top-bar-item">
-                            <i class="header__top-bar-icon fa fa-phone"></i>
-                            <a href="tel:1-678-230-4384" class="header__top-bar-link header__phone-icon">1-678-230-4384</a>
+                            <svg class="header__top-bar-icon">
+                                <use xlink:href="img/sprite.svg#icon-phone" />
+                            </svg>
+                            <a href="tel:1-678-513-3909" class="header__top-bar-link header__phone-icon">1-678-513-3909</a>
                         </li>
                         <li class="header__top-bar-item">
-                            <i class="header__top-bar-icon fa fa-envelope"></i>
-                            <a href="mailto:school@parkway.com" class="header__top-bar-link">school@parkway.com</a>
+                            <svg class="header__top-bar-icon">
+                                <use xlink:href="img/sprite.svg#icon-envelop" />
+                            </svg>
+                            <a href="mailto:info@parkwaypreschool.com" class="header__top-bar-link">info@parkwaypreschool.com</a>
                         </li>
                     </ul>
                 </div>
@@ -32,7 +36,7 @@
         
         <div class="header__main-sect">
             <div class="header__logo">
-                <a href="/index.html" class="header__logo-link">
+                <a href="index.html" class="header__logo-link">
                     <img class="header__logo-image" src="img/logo.jpg" alt="parkway logo">
                 </a>
              </div>
@@ -53,10 +57,10 @@
                         <a href="index.html" class="header__nav-link" data-title="Home">Home</a>
                     </li>
                     <li class="header__nav-item">
-                        <a href="aboutus.html" class="header__nav-link" data-title="AboutUs">About Us</a>
+                        <a href="aboutus.html" class="header__nav-link" data-title="TheAboutUs">About Us</a>
                     </li>
                     <li class="header__nav-item">
-                        <a href="program.html" class="header__nav-link" data-title="Program">Program</a>
+                        <a href="program.html" class="header__nav-link" data-title="TheProgram">Program</a>
                     </li>
                     <li class="header__nav-item">
                         <a href="curriculum.html" class="header__nav-link" data-title="Curriculum">Classes</a> 
