mobile menu animate in place for about us

--- a/aboutus.html
+++ b/aboutus.html
@@ -55,7 +55,8 @@
                    <li class="header__nav-item">
                         <a href="index.html" class="header__nav-link" data-title="Home">Home</a>
                     </li>
-                    <li class="header__nav-item">
+                    <li class="header__nav-item testt">
+                       <div class="empty"></div>
                         <a href="aboutus.html" class="header__nav-link" data-title="TheAboutUs">About Us</a>
                     </li>
                     <li class="header__nav-item">
