--- a/index.html
+++ b/index.html
@@ -16,6 +16,11 @@
 </head>
 
 <body class="Home">
+  
+  
+  
+  
+  
    
     <header class="header">
        
@@ -62,8 +67,9 @@
                    <li class="header__nav-item">
                         <a href="index.html" class="header__nav-link" data-title="Home">Home</a>
                     </li>
-                    <li class="header__nav-item">
-                        <a href="aboutus.html" class="header__nav-link" data-title="AboutUs">About Us</a>
+                    <li class="header__nav-item testt">
+                       <div class="empty"></div><!-- REMOVE THIS IF YOU DONT USE THE MOBILE MENU ANIMATIONS -->
+                        <a href="aboutus.html" class="header__nav-link test" data-title="AboutUs">About Us</a>
                     </li>
                     <li class="header__nav-item">
                         <a href="program.html" class="header__nav-link" data-title="Program">Program</a>
