--- a/aboutus.html
+++ b/aboutus.html
@@ -57,7 +57,7 @@
                     </li>
                     <li class="header__nav-item testt">
                        <div class="empty"></div>
-                        <a href="aboutus.html" class="header__nav-link" data-title="TheAboutUs">About Us</a>
+                        <a href="aboutus.html" class="header__nav-link test" data-title="TheAboutUs">About Us</a>
                     </li>
                     <li class="header__nav-item">
                         <a href="program.html" class="header__nav-link" data-title="Program">Program</a>
@@ -87,6 +87,15 @@
         <div class="hero__wrap-2">
             <h1 id="test" class="hero__heading">THIS IS THE ABOUT US PAGE</h1>
             
+            <!--<svg height="300" width="100%">
+              <defs>
+                <clipPath id="svg-path">
+                   <text x="50%" y="50%" text-anchor="middle" dominant-baseline="middle" font-size="150px" font-family="Lato, sans-serif" letter-spacing="8">Pray-LEARN-Play</text>
+                </clipPath>
+              </defs>
+          </svg>
+           <img src="img/hero-aboutus.jpeg" alt="bubbles in ocean" class="bubbles--one"> -->
+           <div class="brush"></div> 
         </div>
     </div>
 
@@ -178,7 +187,7 @@
             </div>
             <div class="aboutus__sect">
                 <div class="aboutus__imgwrap">
-                    <svg class="aboutus__icon">
+                    <svg class="aboutus__icon" id="mee">
                         <use xlink:href="img/sprite.svg#icon-home" />
                     </svg>
                 </div>
