--- a/contactus.html
+++ b/contactus.html
@@ -104,6 +104,8 @@
     <div class="hero">
         <div class="hero__wrap-2 contact"> 
         <h1 id="test" class="hero__heading">THIS IS THE CONTACT US PAGE</h1>
+        
+        <div class="brush"></div> 
         </div>
     </div>
     
