--- a/forms.html
+++ b/forms.html
@@ -89,6 +89,7 @@
         <div class="hero__wrap-2">
             <h1 id="test" class="hero__heading">THIS IS THE FORMS PAGE</h1>
             
+            <div class="brush"></div>
         </div>
     </div>
     
