--- a/staff.html
+++ b/staff.html
@@ -86,6 +86,8 @@
     <div class="hero">
         <div class="hero__wrap-2 ourstaff"> 
         <h1 id="test" class="hero__heading">THIS IS THE STAFF</h1>
+        
+        <div class="brush"></div>
         </div>
     </div>
     
