--- a/curriculum.html
+++ b/curriculum.html
@@ -87,6 +87,8 @@
     <div class="hero">
         <div class="hero__wrap-2 curriculum"> 
         <h1 id="test" class="hero__heading">THIS IS THE CLASSES PAGE</h1>
+        
+        <div class="brush"></div>
         </div>
     </div>
     
