--- a/program.html
+++ b/program.html
@@ -85,6 +85,9 @@
     <div class="hero">
         <div class="hero__wrap-2 program"> 
         <h1 id="test" class="hero__heading">THIS IS THE PROGRAM PAGE</h1>
+        
+        <div class="brush"></div> 
+        
         </div>
     </div>
 
