--- a/contactus.html
+++ b/contactus.html
@@ -158,7 +158,7 @@
                           <use xlink:href="img/sprite.svg#icon-user" />
                       </svg>
                   </span>
-                  <input name="applicant-name" id="applicant-name" type="text" placeholder="Full Name Here"/>
+                  <input name="applicant-name" id="applicant-name" type="text" />
                 </span>
 
               </p>
