--- a/program.html
+++ b/program.html
@@ -3,7 +3,7 @@
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta charset="UTF-8">
-    <link href="https://fonts.googleapis.com/css?family=Lato:100,300,300i,400,700,700i,900|Grand+Hotel&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Lato:300,300i,400,700|Bubblegum+Sans&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/styles.css">
     <title>Program - Parkway Preschool</title>
 </head>
@@ -99,25 +99,25 @@
        
        <div class="program__wrap">
           
-          <h3 id="price-target" class="line__subhdg">Christian Instruction</h3>
+          <h3 class="line__subhdg">Christian Instruction</h3>
           <div class="program__sect">
               <p class="program__para">
                   The early development programs are based on our belief and faith in Jesus Christ. This foundation of faith will be reflected in all aspects of the preschool from the loving teachers to the curriculum and chapel time.
               </p>
           </div>
-          <h3 id="price-target" class="line__subhdg">Parent Involvement</h3>
+          <!--<h3 class="line__subhdg">Parent Involvement</h3>
           <div class="program__sect">
               <p class="program__para">
                   Parents are an integral part of the program and are partners in the learning process. We invite parents into our preschool to serve and assist in many ways routinely such as the library and office, but often find many ways to assist within the classroom specifically to help the teacher. Parent/teacher conferences are held twice a year in addition to the daily and weekly communication between teachers and parents. Simply put, our Parkway families are the best and we consider it a high honor to partner in your child’s preschool years of learning and growth.
               </p>
-          </div>
+          </div>-->
           <h3 id="price-target" class="line__subhdg">After School Activities</h3>
           <div class="program__sect">
               <p class="program__para">
                   Lunch Bunch is an after school opportunity for our students in Threes, Fours, and Young Fives classrooms. This optional program teaches life skills including manners, unpacking a lunch independently, cleaning up, and eating a nutritious meal (provided by parents) in a classroom setting. Our school is a completely nut free school and we DO NOT allow peanuts, tree nuts, peanut butter, or nut butters in any lunch. The cost is $3 a day and is offered on Mondays and Tuesdays. Lunch Bunch forms are sent home at the beginning of the year and turned in monthly, but may also be printed from the <a class="program__link" href="/forms.html#forms-target">forms page</a> of our website.
               </p>
           </div>
-          <h3 id="price-target" class="line__subhdg">Registration</h3>
+          <h3 class="line__subhdg">Registration</h3>
           <div class="program__sect program__sect-flex">
              <div class="program__para-wrap">
                  <p class="program__para">
@@ -166,7 +166,7 @@
                  </p> 
              </div>
              <div class="program__table-wrap program__table-wrap--reverse">
-                  <table class="program__table">
+                  <table class="program__table program__table--reverse">
                       <tr class="program__table-row--two">
                           <th>Days Attended</th>
                           <th>Activity Fee</th>
