--- a/staff.html
+++ b/staff.html
@@ -3,7 +3,7 @@
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta charset="UTF-8">
-    <link href="https://fonts.googleapis.com/css?family=Lato:100,300,300i,400,700,700i,900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Lato:300,300i,400,700,700i|Bubblegum+Sans&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/styles.css">
     <title>Staff - Parkway Preschool</title>
 </head>
@@ -147,7 +147,7 @@
         <div class="staff__teachers">
            <div class="staff__teachers-grid">
                 <ul class="staff__teachers-list">
-                    <li class="staff__teachers-hdg">Teachers</li>
+                    <li class="staff__teachers-hdg">Ages</li>
                     <li class="staff__teachers-item staff__teachers-item--first">
                         <a href="#twos" class="staff__teachers-link staff__teachers-link--current">Twos</a>
                     </li>
@@ -160,7 +160,7 @@
                     <li class="staff__teachers-item staff__teachers-item--last">
                         <a href="#fives" class="staff__teachers-link">Young Fives</a>
                     </li>
-                    <li class="staff__teachers-btmhdg">Something</li>
+                    <li class="staff__teachers-btmhdg"></li>
                 </ul>
                 <div class="staff__teachers-table-wrap">
                     <div data-id="twos" class="staff__teachers-listout staff__teachers-listout--visible">
