updated remaining calender events

--- a/aboutus.html
+++ b/aboutus.html
@@ -101,11 +101,11 @@
          <svg height="0" width="0">
               <defs>
                 <clipPath id="svg-path">
-                   <text x="600" y="180" text-anchor="middle" dominant-baseline="middle" font-size="110px" font-family="Bubblegum Sans, sans-serif" letter-spacing="8">Pray <tspan letter-spacing="2" font-size="165px">LEARN</tspan> Play</text>
+                   <text x="600" y="180" text-anchor="middle" dominant-baseline="middle" class="aboutus__text-svg">Pray <tspan class="aboutus__tspan-svg">LEARN</tspan> Play</text>
                 </clipPath>
               </defs>
           </svg>
-           <img src="img/chalkboard.jpg" alt="bubbles in ocean" class="bubbles--one">
+           <img src="img/chalkboard.jpg" alt="bluish colored chalkboard" class="aboutus__image-svg">
 
         <div class="aboutus__wrap">
            
