--- a/aboutus.html
+++ b/aboutus.html
@@ -104,7 +104,7 @@
                 </clipPath>
               </defs>
           </svg>
-           <img src="img/chalkboard.jpg" alt="bluish colored chalkboard" class="aboutus__image-svg">
+           <img src="img/chalkboard--blue.jpg" alt="bluish colored chalkboard" class="aboutus__image-svg">
 
         <div class="aboutus__wrap">
            
