--- a/forms.html
+++ b/forms.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <title>Forms - Parkway Preschool</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta charset="UTF-8">
+    <meta name="description" content="Parkway Presbyterian Preschool and Kindergarten is a private Christian preschool founded in 1999 and currently serves 175 children ages 2 years through 5 years. The program is accredited by the North Georgia Preschool Association and is recognized as a School of Excellence. Our mission is to partner with parents to offer a loving, nurturing, and Christ-filled environment where each child can be encouraged to develop their unique personalities and God-given talents."> 
+    
     <link href="https://fonts.googleapis.com/css?family=Lato:100,300,300i,400,700,700i,900|Grand+Hotel&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/styles.css">
-    <title>Forms - Parkway Preschool</title>
 </head>
 
 
