more MQs for classes

--- a/curriculum.html
+++ b/curriculum.html
@@ -101,7 +101,7 @@
         <div class="curriculum__wrap">
             <div class="curriculum__sect-wrap">
                
-                <div class="curriculum__sect">
+                <div class="curriculum__sect no--line">
                     <img src="img/childs-hands.jpg" alt="" class="curriculum__image">
                     <div class="curriculum__main">
                         <div class="curriculum__top">
